[project]
name = "bluedragon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "bluedragongh", email = "pj0028@uah.edu" }
]
requires-python = ">=3.12"
dependencies = []

[tool.maturin]
module-name = "bluedragon._core"
python-packages = ["bluedragon"]
python-source = "src"

[tool.uv.workspace]
members = [
    "differential",
    "difftest",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
